# ros2-mecanum-robot

./: .gitignore  README.md  requirements.txt
docs/: SLAM_PARAMETERS.md  TROUBLESHOOTING.md  WEEK3_PROGRESS.md  WEEK4_5_PROGRESS.md  WEEK6_Progress.md
src/ros_robot_bringup/: setup.py
src/ros_robot_bringup/config/: ekf.yaml  ekf_nav.yaml  ekf_nav.yaml.backup  nav2_params.yaml  nav2_params.yaml.backup  robot_sensors.rviz  slam_high_quality.yaml
src/ros_robot_bringup/launch/: navigation.launch.py  robot_with_ekf.launch.py  slam.launch.py  slam_high_quality.launch.py  slam_hq_with_ekf.launch.py
src/ros_robot_bringup/maps/: room_20260217_022826.yaml
src/ros_robot_bringup/ros_robot_bringup/: package.xml  setup.cfg
src/ros_robot_bringup/ros_robot_bringup/config/: doorway_config.yaml  nav2.rviz  nav2_params.yaml  nav2_params.yaml.backup  slam.rviz  slam_high_quality.yaml  slam_params.yaml
src/ros_robot_bringup/ros_robot_bringup/launch/: navigation.launch.py  navigation.launch.py.backup  sensors.launch.py  slam_hq_with_ekf.launch.py  slam_mapping.launch.py  view_sensors.launch.py
src/ros_robot_bringup/ros_robot_bringup/maps/: apartment_full.pgm  apartment_full.yaml  apartment_full_cleaned.pgm  apartment_full_cleaned.yaml  room_20260217_022826.pgm
src/ros_robot_description/: setup.cfg  setup.py
src/ros_robot_description/ros_robot_description/: package.xml
src/ros_robot_description/ros_robot_description/launch/: display.launch.py
src/ros_robot_description/ros_robot_description/rviz/: display.rviz
src/ros_robot_description/urdf/: mecanum_robot.urdf  mecanum_robot.urdf.backup
src/ros_robot_driver/: package.xml  setup.cfg  setup.py
src/ros_robot_driver/ros_robot_driver/: driver_node.py  rotate_after_goal.py  setup.py
src/ros_robot_driver/ros_robot_driver/ros_robot_driver/: driver_node.py  goal_manager.py  goal_manager_v4.py  goal_manger_v4.backup  measure_doorways.py
