<?xml version="1.0"?>
<package format="3">
  <name>ros_robot_description</name>
  <version>0.0.1</version>
  <description>URDF for ROS2 Mecanum Robot</description>
  <maintainer email="aungkko.edu@gmail.com">Aung</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>